test(global): :test_tube: trying to avoid horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -78,6 +78,7 @@ html {
   align-items: center;
   height: 100vh;
   position: relative;
+  overflow-x: hidden;
 }
 
 .sidebar {
